新增 数据库Entity

--- a/AssetManagment.Web.Entry/appsettings.json
+++ b/AssetManagment.Web.Entry/appsettings.json
@@ -9,11 +9,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionConfigs": [
-    {
-      "ConnectionString": "Data Source=./data.db",
-      "DbType": "Sqlite",
-      "IsAutoCloseConnection": true
-    }
-  ]
+  "ConnectionConfigs": {
+    "db_master": "Server=39.108.127.214,7088;Database=AssetManagment;User=;Password=;MultipleActiveResultSets=True;",
+    "db_test": "Data Source=./db_test.db"
+  }
 }
