--- a/AssetManagment.Web.Entry/AssetManagment.Web.Entry.csproj
+++ b/AssetManagment.Web.Entry/AssetManagment.Web.Entry.csproj
@@ -34,4 +34,9 @@
 	  <None Include="Views\AssetInfo\category.cshtml" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="wwwroot\assetinfo\新文件夹\" />
+	  <Folder Include="wwwroot\js\" />
+	</ItemGroup>
+
 </Project>
